--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/dw_501
     username: root
-    password: 1q2w3e4r!
+    password: toor
   jpa:
     database: mysql
     generate-ddl: true
